refactor: Move api request body declarations into request files.
