# app/Http/Requests/Dashboard/Links/CreateLinkRequest.php
@@ -8,6 +8,17 @@ use App\Models\File;
 use App\Rules\Groups\FileLink\LinkTypeRules;
 use App\ValueObjects\LinkToken\LinkTokensFactory;
 
+/**
+ * @OA\RequestBody(
+ *     request="create-link-token-request-body",
+ *     required=true,
+ *     description="Link token information.",
+ *     @OA\JsonContent(
+ *         required={"link_type"},
+ *         @OA\Property(property="link_type", type="string", enum={"disposable", "unlimited"}),
+ *     ),
+ * )
+ */
 final class CreateLinkRequest extends AppFormRequest
 {
     public function rules(LinkTypeRules $linkTypeRules): array
